@@ -21,6 +21,7 @@ Term::ReadKey     = 0
 [Prereqs / TestRequires]
 Devel::Cover              = 0
 File::Temp                = 0
+File::HomeDir             = 0
 Pod::Coverage             = 0
 Test::Exception           = 0
 Test::MockObject::Extends = 0
