@@ -2,6 +2,7 @@
 {{$NEXT}}
 
  - Add a lock file to avoid race conditions
+ - Homedir discovery using File::HomeDir (cross platform improvements)
 
 1.20150914 2015-09-14 Australia/Melbourne
 
